--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,56 @@
+altgraph==0.17.3
+asgiref==3.5.2
+asttokens==2.0.8
+backcall==0.2.0
+certifi==2022.9.24
+charset-normalizer==2.1.1
+colorama==0.4.5
+debugpy==1.6.3
+decorator==5.1.1
+Django==4.1.2
+entrypoints==0.4
+executing==1.1.1
+future==0.18.2
 greenlet==1.1.3.post0
+idna==3.4
+image==1.5.33
+ipykernel==6.16.0
+ipython==8.5.0
+jedi==0.18.1
+jupyter-core==4.11.1
+jupyter_client==7.4.2
+matplotlib-inline==0.1.6
+nest-asyncio==1.5.6
+numpy==1.23.3
+packaging==21.3
+pandas==1.5.0
+parso==0.8.3
+pefile==2022.5.30
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==9.2.0
+prompt-toolkit==3.0.31
+psutil==5.9.2
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pygame==2.1.2
+Pygments==2.13.0
+pyinstaller==5.4.1
+pyinstaller-hooks-contrib==2022.10
+pyparsing==3.0.9
+PySimpleGUI==4.60.4
+python-dateutil==2.8.2
+pytz==2022.4
+pywin32==304
+pywin32-ctypes==0.2.0
+pyzmq==24.0.1
+requests==2.28.1
+six==1.16.0
 SQLAlchemy==1.4.42
+sqlparse==0.4.3
+stack-data==0.5.1
+tornado==6.2
+traitlets==5.4.0
+tzdata==2022.5
+urllib3==1.26.12
+wcwidth==0.2.5
